--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.1.0",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
