--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^1.10.3",
